BEN1: append spot-check completion for the near-floor Reportable-classification finding (computenet-x9e.7)
Re-measures the three Reportable rows (all SIM: FILTER retract, INTERSECT
retract, GROUP_BY_SUM retract) that computenet-x9e.7's own three-row spot
check had not yet covered, at the identical annotation config (fork=2,
warmup 5x1s, measurement 10x1s) on a quiesced host.

All three flip to Unreportable on re-measurement (dispersion 12.1x, 1.6x
and 5.0x their recorded values respectively), completing the set: all six
of the six Reportable rows recorded across the REAL and SIM sweeps
(computenet-x9e.4.5, computenet-x9e.4.4) have now been spot-checked and
all six failed to reproduce their classification. Absolute scores again
reproduce well (within 6.07% at worst), so this remains a
dispersion-stability finding, not a wrong-number one.

Config not widened, NOISE_FLOOR untouched, no file outside
doc/bench/findings.md touched, per [BEN1-25].

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>